# crac-client

./: .gitignore  README.md  pyproject.toml
crac_client/: app.py  config.ini  gui.py  jobs.py  logging.conf  streaming.py
crac_client/converter/: __init__.py  button_converter.py  camera_converter.py  converter.py  curtains_converter.py  roof_converter.py  telescope_converter.py  ups_converter.py  weather_converter.py
crac_client/retriever/: button_retriever.py  camera_retriever.py  curtains_retriever.py  retriever.py  roof_retriever.py  telescope_retriever.py  ups_retriever.py  weather_retriever.py
locales/: base.pot
